--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,8 +1,13 @@
 flutter_native_splash:
   color: "ffffff"
   image: images/logo2.png
+  color_dark: "060E1E"
+  image_dark: images/logo2.png
+
 
   android_12:
    image: images/android12splash.png
    color: "ffffff"
+   color_dark: "141A2E"
+   image_dark: images/Group 10.png
 
