--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  http: ^1.2.2
+  audioplayers: ^6.1.0
 
 
 dev_dependencies:
@@ -53,6 +55,7 @@ dev_dependencies:
   flutter_native_splash: ^2.4.0
   provider: ^6.1.2
   shared_preferences: ^2.3.1
+  flutter_launcher_icons: ^0.14.1
 
 
 
@@ -66,6 +69,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -106,3 +110,12 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/playstore-icon.png"  # المسار إلى الأيقونة
+  adaptive_icon_background: "#FFFFFF"  # لون الخلفية للأيقونة المتكيفة
+  adaptive_icon_foreground: "images/playstore-icon.png"  # مسار الأيقونة الأمامية للأيقونة المتكيفة
+  min_sdk_android: 21  # الحد الأدنى لـ SDK الخاص بـ Android
+  remove_alpha_ios: true  # إزالة القنوات الشفافة في iOS
+
